Fixed alignment

--- a/MastermindsApp/client/src/app/chat/chat.component.scss
+++ b/MastermindsApp/client/src/app/chat/chat.component.scss
@@ -188,4 +188,8 @@ button {
     .Chat-Footer {
       display: block;
     }
+
+    h1 {
+      margin-left: auto;
+    }
   }
