--- a/MastermindsApp/client/src/app/game-log/game-log.component.scss
+++ b/MastermindsApp/client/src/app/game-log/game-log.component.scss
@@ -77,4 +77,7 @@ button {
     background: #00000060;
     z-index: 9;
   }
+  h1 {
+    margin-left: auto;
+  }
 }
